# verify-oidc-token

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml
src/verify_oidc_token/: __init__.py  cli.py
tests/: integration_test.py  test_cli.py  test_verify_oidc_token.py
